--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 <div id = 'displayTable'></div>
 <div id = 'buttonsHere'></div>
-<div id = 'search'></div>
+<div id = 'search'><input title = 'First Name' id = 'searchBarOne' type = 'text'>
+    <input title = 'Last Name' id = 'searchBarTwo' type = 'text'>
+    <input title = 'ID' id = 'searchBarThree' type = 'text'></div>
 </body>
 </html>
