--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  interface to add new students, teachers, sections -->
 
 <body>
-<div id = 'displayTable'></div>
+<div id = 'displayTable'><script>html();</script></div>
 <div id = 'buttonsHere'></div>
 <div id = 'search'><input title = 'First Name' id = 'searchBarOne' type = 'text'>
     <input title = 'Last Name' id = 'searchBarTwo' type = 'text'>
