--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 <button id = 'newSection' onclick = 'addSection();'>add section</button>
 <button id = 'newStudent' onclick = 'addaStudent();'>add student</button>
 <button id = 'newTeacher' onclick = 'addaTeacher();'>add teacher</button>
-
+<br>
 <input title = 'section' id = 'sectInp' type = 'text' value='section'>
-<input title = 'student' id = 'stuInp' type = 'text' value = 'student'>
-<button id = 'studentInSect' onclick = 'addStudentToSection(document.getElementById("stuInp").value, document.getElementById("sectInp").value);'>add stu to sect</button>
-<button id = 'studentOfSect' onclick = 'removeStudentFromSection(document.getElementById("stuInp").value, document.getElementById("sectInp").value);'>add tea to sect</button>
-
+<!--try to do this w/ alerts?-->
+<input title = 'student' id = 'stuInp1' type = 'text' value = 'students first name'>
+<input title = 'student' id = 'stuInp2' type = 'text' value = 'students last name'>
+<input title = 'student' id = 'stuInp3' type = 'text' value = 'students id'>
+<input title = 'student' id = 'stuInp4' type = 'text' value = 'students grade'>
+<button id = 'studentInSect' onclick = 'var newStu = new Student(); newStu.id = document.getElementById("stuInp3").value; newStu.firstName = document.getElementById("stuInp1").value; newStu.lastName = document.getElementById("stuInp2").value; newStu.grade = document.getElementById("stuInp4").value;
+addStudentToSection(newStu, document.getElementById("sectInp").value);'>add stu to sect</button>
+<button id = 'studentOfSect' onclick = 'removeStudentFromSection(document.getElementById("stuInp").value, document.getElementById("sectInp").value);'>remove stu from sect</button>
+<br>
 <div id = 'search'>
     <input title = 'First Name' id = 'searchBarOne' type = 'text' value = "FIRST NAME">
     <input title = 'Last Name' id = 'searchBarTwo' type = 'text' value = "LAST NAME">
