add a button to add students

--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
     <link rel = 'stylesheet' href = 'school.css'>
 </head>
 
-<!-- web interface w/ buttons, text fields, display area for output
- table w/ elements: students, teachers, sections
- interface to add new students, teachers, sections -->
-
-<!-- show/hide div sections for adding students, etc (text fields AND buttons) -->
+<!-- remove students -->
 
 <body>
 
@@ -57,7 +53,7 @@
 
 <br>
 
-<div id = 'displayTable'><script>html();</script></div>
+<table id = 'displayTable'><script>html();</script></table>
 
 <br>
 
