--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 <body>
 
-
+<!--
+Final Notes!
+1. fix adding sections so you can add multiple students
+2. relative postioning!!! Do it!!!
+3. make it pretty!
+-->
 <table id = 'adder'>
     <tr>
         <td>
@@ -33,8 +38,7 @@
         </td>
         <td>
             <div id = 'addingSect'>
-                <input type = text title = 'addSect1' id = 'addSectName' value = 'Section Name'>
-                <input type = text title = 'addSect1' id = 'addSectMax' value = 'Max Size'>
+                <div id = 'sectbars'></div>
 
                 <div id = 'addingSectStu'></div>
 
