--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
     <link rel = 'stylesheet' href = 'school.css'>
 </head>
 
-
+<!-- add listall to searchDisplay!!-->
 <body>
 
-<!--
-Final Notes!
-1. fix adding sections so you can add multiple students
-2. relative postioning!!! Do it!!!
-3. make it pretty!
--->
+<div id = 'title'>Nora Coates' School Management System</div>
 
 <div id = 'searchMain'>
     <button id = 'stusearch' onclick = 'document.getElementById("searchstu").className = "show";
@@ -49,6 +44,11 @@ Final Notes!
     <br>
     <button id = 'startsearch' onclick = 'setSearch();'>Search!</button>
     <br>
+    <div id = 'lister'>
+        <button id = 'liststu' onclick = 'listall("stu");'>List all Students</button>
+        <button id = 'listtea' onclick = 'listall("tea");'>List all Teachers</button>
+        <button id = 'listsec' onclick = 'listall("sec");'>List all Sections</button>
+    </div>
     <div id = 'searchDisplay'></div>
 </div>
 
@@ -73,23 +73,21 @@ Final Notes!
     </tr>
 </table>
 
-<table id = 'displayTable'><script>html();</script></table>
-
 
 <div id = 'addingStudents' class = 'secret'>
     <p class = 'titletext'>Enter Student Details</p>
-    <input type = text title = 'addStuName1' id = 'addStuName1' value = 'First Name'>
-    <input type = text title = 'addStuName2' id = 'addStuName2' value = 'Last Name'>
-    <input type = text title = 'addStuGrade' id = 'addStuGrade' value = 'Grade'>
-    <button onclick = 'addaStudent(); document.getElementById("addingStudents").className = "secret";'>Create a Student</button>
+    <input type = text title = 'addStuName1' id = 'addStuName1' class = 'field1' value = 'First Name'>
+    <input type = text title = 'addStuName2' id = 'addStuName2' class = 'field2' value = 'Last Name'>
+    <input type = text title = 'addStuGrade' id = 'addStuGrade' class = 'field3' value = 'Grade'>
+    <button onclick = 'addaStudent(); document.getElementById("addingStudents").className = "secret";' class = 'fini'>Create a Student</button>
 </div>
 
 <div id = 'addingTeachers' class = 'secret'>
     <p class = 'titletext'>Enter Teacher Details</p>
-    <input type = text title = 'addTeaName1' id = 'addTeaName1' value = 'First Name'>
-    <input type = text title = 'addTeaName2' id = 'addTeaName2' value = 'Last Name'>
-    <input type = text title = 'addTeaSubj' id = 'addTeaSubj' value = 'Subject'>
-    <button onclick = 'addaTeacher(); document.getElementById("addingTeachers").className = "secret";'>Create A Teacher</button>
+    <input type = text title = 'addTeaName1' id = 'addTeaName1' class = 'field1' value = 'First Name'>
+    <input type = text title = 'addTeaName2' id = 'addTeaName2' class = 'field2' value = 'Last Name'>
+    <input type = text title = 'addTeaSubj' id = 'addTeaSubj' class = 'field3' value = 'Subject'>
+    <button onclick = 'addaTeacher(); document.getElementById("addingTeachers").className = "secret";' class = 'fini'>Create A Teacher</button>
 </div>
 
 <div id = 'addingSect' class = 'secret'>
@@ -102,6 +100,8 @@ Final Notes!
     <script>setAddSection();</script>
     <button id = 'addsectbutton' onclick = 'addSection(); document.getElementById("addingSect").className = "secret";'>Create a Section</button>
 </div>
+
+<table id = 'displayTable'><script>html();</script></table>
 
 
 </body>
